# rizum-blender-clip-reload

./: .gitignore  .mcp.json  AGENTS.md  Blend_HardMix.clip  CLAUDE.md  CONTEXT.md  Illustration4K.clip  IllustrationBlendModes.clip  NOTICE.md  README.md  Test_Clipping.clip  Test_Color.clip  Test_FolderVisibility.clip  Test_HardMix.clip  Test_Hue.clip  Test_Mask.clip  Test_VividLight.clip  analysis.md  check_chains.py  check_masks.py  clip_loader.py  debug_multiply.py  design.md  inspect_clip.py  inspect_psd_layers.py  inspect_vector_dynamics.py  plan.md  trace_fast.py  trace_pixel.py  trace_pixel2.py  trace_pixel_analysis.py  verify_blend_modes.py  verify_filter_exports.py  verify_one_clip.py  verify_vector_experiments.py  ziv89Yju
native/oiio/: CMakeLists.txt  README.md
native/oiio/src/: clip_input.cpp
native/oiio/tools/: probe_open.cpp
native/rust/: Cargo.toml
native/rust/crates/clip_capi/: Cargo.toml
native/rust/crates/clip_capi/include/: clip_capi.h
native/rust/crates/clip_capi/src/: lib.rs  support_report.rs
native/rust/crates/clip_cli/: Cargo.toml
native/rust/crates/clip_cli/src/: blender_server.rs  blender_worker.rs  blender_worker_render_profile.rs  blender_worker_sparse.rs  blender_worker_task_graph.rs  compare_png.rs  layer_labels.rs  layer_window.rs  main.rs  options.rs  performance_plan_json.rs  pixel_trace_text.rs  reload_manifest.rs  runner.rs  support_json.rs  support_text.rs  tile_silo_text.rs
native/rust/crates/clip_file/: Cargo.toml
native/rust/crates/clip_file/src/: atlas_chunks.rs  container.rs  decode_profile.rs  error.rs  external.rs  external_tests.rs  lib.rs  metadata.rs  placement.rs  read.rs  read_tests.rs  tile_region.rs  tiles.rs
native/rust/crates/clip_file/src/metadata/: filter_source.rs  layer_graph.rs  mask_source.rs  paper_color.rs  raster_source.rs  records.rs  schema.rs  summary.rs  text_source.rs
native/rust/crates/clip_gpu/: Cargo.toml
native/rust/crates/clip_gpu/src/: blend.rs  device.rs  lib.rs  lut_filter.rs  pass.rs  pass_clipping.rs  pass_container.rs  pass_normal.rs  pass_normal_encode.rs  pass_pipeline.rs  pass_tests.rs  pass_through.rs  readback.rs  render_profile.rs  renderer.rs  resource.rs  shaders.rs  source_params.rs  sparse_atlas.rs  sparse_atlas_batch_tests.rs  sparse_atlas_batches.rs  sparse_atlas_executor.rs  sparse_atlas_prepare.rs  sparse_atlas_prepare_payloads.rs  sparse_atlas_scope_tests.rs  sparse_atlas_scope_through_tests.rs  sparse_atlas_targets.rs  sparse_atlas_tests.rs  stream.rs  stream_bounds.rs  stream_clipped_tile_silo.rs  stream_clipping.rs  stream_clipping_tile_silo.rs  stream_context.rs  stream_effects.rs  stream_extents.rs  stream_groups.rs  stream_legacy_segment.rs  stream_program.rs  stream_program_barriers.rs  (+31 more)
native/rust/crates/clip_gpu/src/shaders/: add_glow.rs  clipped_byte.rs  copy.rs  dodge_burn.rs  lut_filter.rs  normal.rs  standard.rs  through.rs  tile_silo.rs  tile_silo.wgsl
native/rust/crates/clip_gpu/src/stream_tests/: cache.rs  common.rs  effects.rs  tile_silo.rs
native/rust/crates/clip_graph/: Cargo.toml
native/rust/crates/clip_graph/src/: lib.rs  node.rs  plan.rs
native/rust/crates/clip_model/: Cargo.toml
native/rust/crates/clip_model/src/: canvas.rs  layer.rs  lib.rs  pixel.rs  rect.rs
native/rust/crates/clip_runtime/: Cargo.toml
native/rust/crates/clip_runtime/src/: blend.rs  error.rs  filter_color_balance.rs  filter_gradient_map.rs  filter_lut.rs  filter_lut_tests.rs  gpu_api.rs  gpu_provider.rs  lib.rs  performance_plan.rs  region.rs  reload_diff.rs  results.rs  selector_gpu.rs  selector_gpu_resources.rs  selector_strict.rs  selector_strict_decode.rs  selector_tree.rs  session_tests.rs  source_crop.rs  stack_plan.rs  support.rs  support_checks.rs  support_select.rs  text_render.rs  tile_silo_estimate.rs  tile_silo_estimate_tests.rs  tile_silo_occupancy.rs  tile_silo_options.rs
native/rust/crates/clip_runtime/src/gpu_api/: checkpoint.rs  sparse_atlas.rs  (+2 more)
(+1143 files in other folders)
