[package]
name = "clip_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clip_file = { path = "../clip_file" }
clip_model = { path = "../clip_model" }
clip_runtime = { path = "../clip_runtime" }
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
clip_graph = { path = "../clip_graph" }
