[package]
name = "clip_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clip_file = { path = "../clip_file" }
clip_gpu = { path = "../clip_gpu" }
clip_graph = { path = "../clip_graph" }
clip_model = { path = "../clip_model" }
fontdb = "0.23"
serde = { version = "1", features = ["derive"] }
skia-safe = "0.99"
ttf-parser = "0.25"

[dev-dependencies]
serde_json = "1"
